--- a/style.css
+++ b/style.css
@@ -97,3 +97,11 @@ form {
   opacity: 1;
   transition: 0.2s;
 }
+
+@media (max-width:760px) {
+  .container {
+    padding-left: 5px;
+    padding-right: 5px;
+    max-width: none;
+  }
+}
